--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body.light-mode {
 
 .container {
   width: 40%;
-  min-width: 350px;
+  min-width: 420px;
   position: absolute;
   transform: translate(-50%, -50%);
   top: 50%;
@@ -26,10 +26,10 @@ body.light-mode {
 }
 
 h1 {
-  font-size: 25px;
+  font-size: 38px;
   position: absolute;
   transform: translate(-50%, -50%);
-  top: 0;
+  top: -6%;
   left: 50%;
   color: #fff;
 }
@@ -42,13 +42,13 @@ h1.light-mode {
   color: #656565;
 }
 
-h4 {
-  font-size: 10px;
+h1 p {
+  position: relative;
+  font-size: 9.5px;
   font-weight: 400;
   letter-spacing: 0.3px;
-  position: absolute;
   transform: translate(-50%, -50%);
-  top: -50%;
+  top: -2%;
   left: 50%;
   color: #a9a9a9;
 }
@@ -68,7 +68,7 @@ h4 {
 
 #new-task input {
   width: 70%;
-  height: 35px;
+  height: 38px;
   font-size: 12px;
   border: 1px solid #d1d3d4;
   border-radius: 5px;
@@ -87,11 +87,11 @@ h4 {
   position: relative;
   float: right;
   width: 27.5%;
-  height: 35px;
+  height: 38px;
   border-radius: 5px;
   border: none;
   font-weight: 500;
-  font-size: 11px;
+  font-size: 12px;
   background-color: #4ca9c9;
   color: #fff;
   cursor: pointer;
@@ -121,7 +121,7 @@ h4 {
 
 .task {
   background: #fff;
-  height: 35px;
+  height: 36px;
   padding: 5px 10px;
   margin-top: 10px;
   display: flex;
@@ -129,6 +129,7 @@ h4 {
   justify-content: space-between;
   border-bottom: 2px solid #d1d3d4;
   cursor: pointer;
+  border-radius: 5px;
 }
 
 .task span {
@@ -159,14 +160,14 @@ h4 {
 
 .switchMode {
   position: relative;
-  width: 80px;
-  height: 20px;
+  width: 90px;
+  height: 28px;
   transform: translate(-50%, -50%);
   left: 50%;
   border-radius: 5px;
   border: none;
   outline: none;
-  font-size: 11px;
+  font-size: 12px;
   font-weight: 500;
   box-shadow: 0 2px 3px rgba(0,0,0,0.2);
   cursor: pointer;
